--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     </link>
     <link rel="stylesheet" href="/style/responsive.css">
     </link>
+    <link rel="stylesheet" href="/style/video.css">
+    </link>
+    <link rel="stylesheet" href="/style/carrosel.css">
+    </link>
 </head>
 
 <body>
@@ -25,8 +29,8 @@
             <h2 class="logo">MEMEFLIX</h2>
 
             <nav>
-                <a href="#">Séries</a>
-                <a href="#">Filmes</a>
+                <a href="#series">Séries</a>
+                <a href="#filmes">Filmes</a>
                 <a href="#">Documentários</a>
                 <a href="#">Games</a>
             </nav>
@@ -35,62 +39,39 @@
 
     <main>
         <div class="filme-principal">
-            <div class="container">
-                <h3 class="titulo">O MÁSCARA (RAÇA NEGRA)</h3>
+            <div class="video-container">
+                <video preload="none" controlList="nofullscreen nodownload" id="myVideo" poster="/img/mask.jpg">
+                    <source src="/src/mask.mp4" type="video/mp4">
+                    Your browser does not support HTML5 video.
+                </video>
 
-                <p class="descricao">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
-                </p>
-
-                <nav class="botoes">
-                    <button class="botao" onclick="location.href='assistir.html'" role="button"><i class="fas fa-rocket"></i>ASSISTIR AGORA</button>
-                    <button class="botao" role="button"><i class="fas fa-meteor"></i>MAIS INFORMAÇÕES</button>
-                </nav>
+                <div class="video-content">
+                    <h3 class="video-title">
+                        O MÁSCARA (RAÇA NEGRA)
+                    </h3>
+                    <p>
+                        O Máskara de um jeito que você nunca viu...
+                    </p>
+                </div>
             </div>
         </div>
 
-        <div class="carrosel-filmes">
-            <div class="owl-carousel owl-theme">
-                <div class="item">
-                    <img src="/img/mini1.jpg" alt="mini1">
-                </div>
+        <div id="series">
+            <h2>Séries</h2>
 
-                <div class="item">
-                    <img src="/img/mini2.jpg" alt="mini1">
-                </div>
+            <div class="carrosel-filmes">
+                <div id="carrosel-serie" class="owl-carousel owl-theme">
 
-                <div class="item">
-                    <img src="/img/mini3.jpg" alt="mini1">
                 </div>
+            </div>
+        </div>
 
-                <div class="item">
-                    <img src="/img/mini4.jpg" alt="mini1">
-                </div>
+        <div id="filmes">
+            <h2>Filmes</h2>
 
-                <div class="item">
-                    <img src="/img/mini5.jpg" alt="mini1">
-                </div>
+            <div class="carrosel-filmes">
+                <div id="carrosel-filme" class="owl-carousel owl-theme">
 
-                <div class="item">
-                    <img src="/img/mini6.jpg" alt="mini1">
-                </div>
-
-                <div class="item">
-                    <img src="/img/mini7.jpg" alt="mini1">
-                </div>
-
-                <div class="item">
-                    <img src="/img/mini8.jpg" alt="mini1">
-                </div>
-
-                <div class="item">
-                    <img src="/img/mini9.jpg" alt="mini1">
-                </div>
-
-                <div class="item">
-                    <img src="/img/mini10.jpg" alt="mini1">
                 </div>
             </div>
         </div>
