--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@
             <nav>
                 <a href="#series">Séries</a>
                 <a href="#filmes">Filmes</a>
-                <a href="#">Documentários</a>
-                <a href="#">Games</a>
             </nav>
         </div>
     </header>
@@ -56,26 +54,32 @@
             </div>
         </div>
 
-        <div id="series">
-            <h2>Séries</h2>
+        <div class="catalogo">
+            <div id="series">
+                <h2>Séries</h2>
 
-            <div class="carrosel-filmes">
-                <div id="carrosel-serie" class="owl-carousel owl-theme">
+                <div class="carrosel-filmes">
+                    <div id="carrosel-serie" class="owl-carousel owl-theme">
 
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div id="filmes">
-            <h2>Filmes</h2>
+            <div id="filmes">
+                <h2>Filmes</h2>
 
-            <div class="carrosel-filmes">
-                <div id="carrosel-filme" class="owl-carousel owl-theme">
+                <div class="carrosel-filmes">
+                    <div id="carrosel-filme" class="owl-carousel owl-theme">
 
+                    </div>
                 </div>
             </div>
         </div>
     </main>
+
+    <footer>
+        Powered By rammaR
+    </footer>
 </body>
 
 <script src="https://kit.fontawesome.com/1267a40c25.js" crossorigin="anonymous"></script>
